4 [refactoring]  page